--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@mdx-js/react": "^2.3.0",
+    "@theme-ui/mdx": "^0.15.5",
     "gatsby": "^5.7.0",
+    "gatsby-plugin-theme-ui": "^0.15.5",
+    "gatsby-theme-style-guide": "^0.15.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "theme-ui": "^0.15.5"
   },
   "repository": {
     "type": "git",
